# Menu-PreProd

./: .gitignore  Dockerfile  O. C5 Template.xlsx  cli.py  debug_profile.py  debug_profile_win.py  import_cookies.py  inspect_lontar.py  inspect_sheets.py  login_gofood.py  login_interactive_shopee.py  main.py  open_dashboard.py  pull.py  pull_from_sheets.py  pyproject.toml  refresh_session.py  test_list_merchants.py  test_login_lontar.py  test_menu.py  upload_drive.py
.agents/: rules.md
Gofood/: .gitignore  __init__.py  cli_updater.py  start.sh
Gofood/API/: menu-headers.txt  menu-response-G001730281.json  menu-response-G025124092.json  menu-response-G050314302.json  menu-response-G060584885.json  menu-response-G069782938.json  menu-response-G107105811.json  menu-response-G121153530.json  menu-response-G136712093.json  menu-response-G137728774.json  menu-response-G148804757.json  menu-response-G150143046.json  menu-response-G154737749.json  menu-response-G198855074.json  menu-response-G204744603.json  menu-response-G246212553.json  menu-response-G254929399.json  menu-response-G255829994.json  menu-response-G277072412.json  menu-response-G279772318.json  menu-response-G326613440.json  (+76 more)
grab/: __init__.py  playground.py
menu_core/: __init__.py  database.py  gofood.py  grab.py  sheets.py  shopee.py
outlet -info/: pull_outlet_info.py
shopee/: O. C5 Template.xlsx  __init__.py
src/: discord_notifier.py
tests/: test_outlet_platform_filters.py
web/: .env.example  eslint.config.mjs  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js
(+229 files in other folders)
