[project]
name = "menu-prod"
version = "1.0.0"
description = "Superfood Tech Menu Production Service"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "playwright>=1.44.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.0",
    "undetected-chromedriver>=3.5.5",
    "rich>=13.7.0",
    "filelock>=3.13.0",
    "google-api-python-client>=2.120.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "PySocks>=1.7.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
]

[tool.uv]
managed = true
